Bug 448449 - Impossible to open Trash settings via Kickoff or KRunner
Summary: Impossible to open Trash settings via Kickoff or KRunner
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 5.23.90
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2022-01-14 10:50 UTC by Patrick Silva
Modified: 2022-01-17 19:35 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Trash settings (32.14 KB, image/png)
2022-01-15 10:34 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-01-14 10:50:58 UTC
SUMMARY
Before Plasma 5.24 beta, Trash settings was listed in the search results of kickoff when I searched for 'trash'.
Now I need to open Dolphin settings to access Trash settings.

STEPS TO REPRODUCE
1. search for 'trash' with kickoff
2. 
3. 

OBSERVED RESULT
Trash settings is not present in the search results

EXPECTED RESULT
Trash settings accessible via kickoff

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.23.90
KDE Frameworks Version: 5.90.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-01-14 23:02:17 UTC
Can reproduce in KRunner as well. Moving there.
Comment 2 Alexander Lohnau 2022-01-15 06:14:01 UTC
The Places-Runner should show the option to open the trash, at least on my system it works as expected, Can you please check if you have disabled the plugin?
Comment 3 Patrick Silva 2022-01-15 10:34:50 UTC
Created attachment 145486 [details]
Trash settings

I can open Trash with Dolphin when Plasces plugin is enabled.
The bug affects Trash settings seen in the attached screenshot.
Comment 4 Alexander Lohnau 2022-01-15 12:01:16 UTC
Oh, apologies. Can confirm and will do a patch today.
Comment 5 Bug Janitor Service 2022-01-15 16:00:50 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/systemsettings/-/merge_requests/112
Comment 6 Alexander Lohnau 2022-01-17 19:34:54 UTC
Git commit 35256285db759a260c1efbe01e37836835fe472c by Alexander Lohnau.
Committed on 15/01/2022 at 15:59.
Pushed by alex into branch 'master'.

Fix trash KCM not showing up in KRunner

In this case we do not want the trader constraint, because we can open the KCMs
in kcmshell.

M  +4    -2    core/kcmmetadatahelpers.h
M  +1    -1    runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/commit/35256285db759a260c1efbe01e37836835fe472c
Comment 7 Alexander Lohnau 2022-01-17 19:35:57 UTC
Git commit c092d953ce4b58de043a3d96eab421f9efbb5989 by Alexander Lohnau.
Committed on 17/01/2022 at 19:35.
Pushed by alex into branch 'Plasma/5.24'.

Fix trash KCM not showing up in KRunner

In this case we do not want the trader constraint, because we can open the KCMs
in kcmshell.


(cherry picked from commit 35256285db759a260c1efbe01e37836835fe472c)

M  +4    -2    core/kcmmetadatahelpers.h
M  +1    -1    runner/systemsettingsrunner.cpp

https://invent.kde.org/plasma/systemsettings/commit/c092d953ce4b58de043a3d96eab421f9efbb5989