Fix trash KCM not showing up in KRunner

In this case we do not want the trader constraint, because we can open the KCMs
in kcmshell.

BUG: 448449


(cherry picked from commit 35256285db759a260c1efbe01e37836835fe472c)